[project]
name = "coalitiestatengeneraal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "parliamentarch>=1.1.2",
    "voici>=0.8.0",
    "voila>=0.5.11",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
