[project]
name = "coalitiestatengeneraal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyterlite-pyodide-kernel>=0.5.2",
    "parliamentarch>=1.1.2",
    "voici-core>=0.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
